package.jsonとpackage-lock.jsonの@types/nodeとtypescriptのバージョンを更新し、knipを追加。layout.tsxでsuppressHydrationWarningを追加し、customer-searches/page.tsxでuseSearchPatternの使用を削除。customer-searches/[searchId]/page.tsxでsearchIdの取得を削除し、search.tsxでsearchPatternsの型定義を修正。関連パターンの表示を改善し、search-form.tsxで不要なコードを削除。search-pattern-card.tsxでcustomerNameをURLに追加し、search-pattern-form-modal.tsxで検索パターンの保存処理を修正。search-pattern-list.tsxでパターンのソート機能を追加。search-utils.tsとsearch-old.tsを削除し、型定義を整理。

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "knip": "knip"
   },
   "dependencies": {
     "@googleapis/customsearch": "^5.0.1",
@@ -45,13 +46,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "knip": "^5.61.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
