--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.0.0-alpha.2",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
